--- a/aboutus.html
+++ b/aboutus.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style2.css">
-    <title>Task 5 - Page 2</title>
+    <title>About Us</title>
     <style>
         /* Main Content */
         .mainContent {
@@ -57,7 +57,7 @@
     <!-- Content body -->
     <div class="container">
         <div class="showcase">
-            <img src="img/banner2.jpg" alt="Banner1">
+            <img src="Images/banner2.jpg" alt="Banner1">
         </div>
         <div class="content">
             <!-- Main Content -->
