--- a/cars.html
+++ b/cars.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style2.css">
-    <title>Task 5</title>
+    <title>Cars</title>
 </head>
 
 <body>
