--- a/login.html
+++ b/login.html
@@ -60,7 +60,7 @@
             text-align: center;
         }
 
-        .login .formBx input[type="text"],
+        .login .formBx input[type="email"],
         .login .formBx input[type="password"] {
             width: 100%;
             margin-bottom: 15px;
